name:            demog_urban_areas
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        <syn>
build-type:      Simple
build-depends:   base

executable:      demog_urban_areas
main-is:         Main.hs
hs-source-dirs:  src

exposed-modules: demog_urban_areas
hs-source-dirs:  src
