name:            demog-urban-areas
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        <syn>
build-type:      Simple
build-depends:   base, directory, filepath, split

executable:      demog-urban-areas
main-is:         Main.hs
hs-source-dirs:  src
extensions:      CPP
